# cmake-catch2-example

./: .gitignore  CMakeLists.txt  azure-pipelines.yml
src/: Hello.cpp  Hello.h  main.cpp
src/docopt/: docopt_value.h
test/: test_Hello.cpp
